--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
  
     <!-- Bootstrap CSS File -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- My CSS File -->
+    <link rel="stylesheet" href="styles.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,7 +20,7 @@
       <link rel="sylesheet" href="styles.css">
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="main">
         <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -49,7 +51,7 @@
   </div><!-- /.container-fluid -->
 </nav>
         <div class="jumbotron">
-            <h1>Ms B's Heirloom Vegetables<br><small>Fresh to your table</small></h1>
+            <h1>Ms B's Heirloom Vegetables<br><small id="small">Fresh to your table</small></h1>
             <p>Every Friday from noon - 3pm at:<br>123 Garden Ave<br>St. Paul, MN 55123</p>
         </div>
             <div class="row">
